--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
                                 </div>
                             </div>
 
-                            <div class="row  mt-8">
+                            <div class="row mt-8">
                                 <div class="col col-full">
                                     <input type="text" name="" placeholder="Message" required id="" class="form-control">
                                 </div>
                             </div>
-                            <input class="btn pull-right mt-16 s-full-width" type="submit" value="SEND">
+                            <input class="contact-submit-btn btn pull-right mt-16 s-full-width" type="submit" value="SEND">
                         </form>
                     </div>
                 </div>
